--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,89 @@
+body {
+    color: rgb(92, 91, 91) !important;
+    background-image: url("images/background.png");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-size: cover;
+}
+
+h1 {
+    font-family: 'Cinzel Decorative';
+    font-size: 60px !important;
+    color: #fe0d7d;
+    filter: drop-shadow(-2px 2px 1px gray);
+}
+
+h2,
+h3,
+h4 {
+    font-family: 'Raleway';
+}
+
+#randomNumber {
+    color: #00ba3a;
+    font-size: 36px;
+    filter: drop-shadow(-2px 2px 1px gray);
+}
+
+#finalTotal {
+    color: #007bdd;
+    font-size: 36px;
+    filter: drop-shadow(-2px 2px 1px gray);
+}
+
+#numberWins {
+    font-size: 36px;
+    color: #fe0d7d;
+    filter: drop-shadow(-2px 2px 1px gray);
+}
+
+#numberLosses {
+    font-size: 36px;
+    color: #ffc813;
+    filter: drop-shadow(-2px 2px 1px gray);
+}
+
+
 .crystalPic {
     margin: 20px;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+    filter: drop-shadow(-8px 8px 3px gray);
+}
+
+.crystalPic:hover {
+    filter: drop-shadow(-8px 8px 3px gray);
+}
+
+.crystalPic:active {
+    width: 90px;
+    height: 90px;
+    animation: shake 1s;
+}
+
+#placeholder {
+    color: white;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
 }
